pathmod_derive/tests/ui/unit_struct.rs
use pathmod::prelude::*;

// Unit structs are explicitly not supported
#[derive(Accessor)]
struct U;

fn main() {}
